kubernetes/cloudflared.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-whisper
  namespace: debugging-echovoice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-whisper
  template:
    metadata:
      labels:
        app: cloudflared-whisper
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:latest
        args:
        - tunnel
        - --config
        - /etc/cloudflared/config.yaml
        - run
        - --token
        - eyJhIjoiZmZhMjc2NTFhNjQ3ZDM3YTcxZmIzYWVhZTk2OWM3NjIiLCJ0IjoiYTIxZmRkMDItMmUxNi00ZWVlLWEwY2YtM2ZlNWZhODM1YmI4IiwicyI6Ik9EWmxaREl6TnprdE4yUmhaQzAwTXpBekxXSXhOemt0WVRjeE4yRmxNemc0WW1WaCJ9
        volumeMounts:
        - name: config
          mountPath: /etc/cloudflared
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
      volumes:
      - name: config
        configMap:
          name: cloudflared-whisper-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-voice
  namespace: debugging-echovoice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-voice
  template:
    metadata:
      labels:
        app: cloudflared-voice
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:latest
        args:
        - tunnel
        - --config
        - /etc/cloudflared/config.yaml
        - run
        - --token
        - eyJhIjoiZmZhMjc2NTFhNjQ3ZDM3YTcxZmIzYWVhZTk2OWM3NjIiLCJ0IjoiMmY1N2Y3MGUtNTAwYi00ODIyLTliMWQtYTY1Yzk0YmUxMjE1IiwicyI6Imhpa1BmRjRtYmkrWDlEQkRnNFE2SHFwbnA1d283TFd4ME8vSnYyVi9Ga3c9In0=
        volumeMounts:
        - name: config
          mountPath: /etc/cloudflared
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: cloudflared-voice-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-mtproto
  namespace: debugging-echovoice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-mtproto
  template:
    metadata:
      labels:
        app: cloudflared-mtproto
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:latest
        args:
        - tunnel
        - --config
        - /etc/cloudflared/config.yaml
        - run
        - --token
        - eyJhIjoiZmZhMjc2NTFhNjQ3ZDM3YTcxZmIzYWVhZTk2OWM3NjIiLCJ0IjoiNzEzMjFlZTYtM2YyOS00NTRiLTk3MjctNjE2ZWFjOWEwZmQ5IiwicyI6IjEzV2dBLzNHK3FXSFZXSkZpY3hNUXVURm0wL2l6dGkvMWRDN1dFbTNabTg9In0=
        volumeMounts:
        - name: config
          mountPath: /etc/cloudflared
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: cloudflared-mtproto-config
