kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-frontend
  namespace: debugging-testcrash-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-frontend
  template:
    metadata:
      labels:
        app: echo-frontend
    spec:
      containers:
      - name: frontend
        image: azazellosaraksh/debugging-mtproto-bridge:v6
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: echo-frontend
  namespace: debugging-testcrash-cloud
spec:
  type: ClusterIP
  selector:
    app: echo-frontend
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
