kubernetes/ingress-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: voicemsg-ingress-ext
  namespace: debugging-testcrash-cloud
spec:
  type: LoadBalancer
  loadBalancerIP: 91.224.11.40
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: ingress-nginx
