kubernetes/ingress-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx
  namespace: debugging-testcrash-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      hostNetwork: true
      containers:
      - name: nginx
        image: registry.k8s.io/ingress-nginx/controller:v1.9.4
        args:
        - /nginx-ingress-controller
        - --election-id=ingress-nginx-leader
        - --controller-class=k8s.io/ingress-nginx
        - --ingress-class=nginx
        - --configmap=ingress-nginx-controller
        - --watch-namespace=debugging-testcrash-cloud
        - --report-node-internal-ip-address
        - --publish-service=debugging-testcrash-cloud/voicemsg-ingress-ext
        - --enable-ssl-passthrough
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: debugging-testcrash-cloud
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: ingress-nginx
