kubernetes/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voicemsg-nodeport
  namespace: debugging-testcrash-pub
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 3000
    nodePort: 30080
  selector:
    app: echo-frontend
