kubernetes/whatsapp-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsapp-client-manager
  namespace: debugging-testcrash-pub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatsapp-client-manager
  template:
    metadata:
      labels:
        app: whatsapp-client-manager
    spec:
      containers:
      - name: whatsapp-client-manager
        image: voicemsg.net/whatsapp-client-manager:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: whatsapp-client-manager
  namespace: debugging-testcrash-pub
spec:
  selector:
    app: whatsapp-client-manager
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
