kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtproto-bridge-ingress
  namespace: debugging-echovoice
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
  - host: echovoice.debug.org.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mtproto-bridge-manager
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sherpa-onnx-ingress
  namespace: debugging-echovoice
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
  - host: sherpa-onnx.echovoice.debug.org.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sherpa-onnx
            port:
              number: 8000
  - host: whisper-onnx.debug.org.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sherpa-onnx
            port:
              number: 8000
