kubernetes/mtproto-ingress-alt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtproto-bridge-ingress-alt
  namespace: debugging-trash-cloud
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  rules:
  - host: voicemsg.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mtproto-bridge-manager
            port:
              number: 3000
